Fixed intro overflow

--- a/css/style.css
+++ b/css/style.css
@@ -912,6 +912,6 @@ form {
   }
 }
 
-section{
+section:not(#intro){
   overflow-x: hidden;
 }
